@@ -37,6 +37,9 @@ Added Keith Edmunds patch adding the --create-full-path option.
 
 Fixed selection bug reported by Daniel Richard G.
 
+bug#13576: You can now back ACLs to a computer that doesn't have the
+posix1e module.
+
 
 New in v0.13.6 (2005/04/07)
 ---------------------------
